[package]
name        = "interfaces"
description = "A Rust library for interacting with network interfaces"
version     = "0.0.7"
authors     = ["Naoya Hatta <dalance@gmail.com>", "Arvid E Picciani <aep@exys.org>", "Andrew Dunham <andrew@du.nham.ca>"]
homepage    = "https://github.com/andrew-d/interfaces-rs"
repository  = "https://github.com/andrew-d/interfaces-rs"
license     = "MIT/Apache-2.0"
build       = "build.rs"

[dependencies]
bitflags    = "1.0"
lazy_static = "1.0"
libc        = "0.2"
nix         = "0.19"

[build-dependencies]
cc              = "1"
handlebars      = "0.29"
serde           = "1.0"
serde_derive    = "1.0"
