[package]
name        = "interfaces"
description = "A Rust library for interacting with network interfaces"
version     = "0.0.8"
authors     = ["Naoya Hatta <dalance@gmail.com>", "Arvid E Picciani <aep@exys.org>", "Andrew Dunham <andrew@du.nham.ca>"]
homepage    = "https://github.com/andrew-d/interfaces-rs"
repository  = "https://github.com/andrew-d/interfaces-rs"
license     = "MIT/Apache-2.0"
build       = "build.rs"

[dependencies]
bitflags    = "1.3.2"
lazy_static = "1.4.0"
libc        = "0.2.139"
nix         = "0.26.2"

[build-dependencies]
cc              = "1"
handlebars      = "4.3.6"
serde           = "1.0"
serde_derive    = "1.0"
